
2)  Fix access to uninitialized variable.

3)  Add logrotate scripts.

4)  Allow long port lists in /etc/shorewall/routestopped.

5)  Implement 'physical' interface option.

6)  Implement ZONE2ZONE option.

7)  Suppress duplicate COMMENT warnings.

8)  Implement 'show policies' command.

9)  Fix route_rule suppression for down provider.

10) Suppress redundant tests for provider availability in route rules processing.

Changes in Shorewall 4.4.3

1)  Move Debian INITLOG initialization to /etc/default/shorewall

2)  Fix 'routeback' in /etc/shorewall/routestopped.

3)  Rename 'object' to 'script' in compiler and config modules.

4)  Correct RETAIN_ALIASES=No.

5)  Fix detection of IP config.

6)  Fix nested zones.

7)  Move all function declarations from prog.footer to prog.header

8)  Remove superfluous variables from generated script

9)  Make 'track' the default.

10)  Add TRACK_PROVIDERS option.

11)  Fix IPv6 address parsing bug.

12)  Add hack to work around iproute IPv6 bug in route handling

13)  Correct messages issued when an optional provider is not usable.

14)  Fix optional interfaces.

15)  Add 'limit' option to tcclasses.

Changes in Shorewall 4.4.2

1)  BUGFIX: Correct detection of Persistent SNAT support

2)  BUGFIX: Fix chain table initialization

3)  BUGFIX: Validate routestopped file on 'check'

4)  Let the Actions module add the builtin actions to
    %Shorewall::Chains::targets. Much better modularization that way.

5)  Some changes to make Lenny->Squeeze less painful.

6)  Allow comments at the end of continued lines.

7)  Call process_routestopped() during 'check' rather than
    'compile_stop_firewall()'.

8)  Don't look for an extension script for built-in actions.

9)  Apply Jesse Shrieve's patch for SNAT range.

10) Add -<family> to 'ip route del default' command.

11) Add three new columns to macro body.

12) Change 'wait4ifup' so that it requires no PATH

13) Allow extension scripts for accounting chains.
