@@ -383,6 +383,10 @@ show_command() {
 			    option=
 			    shift
 			    ;;
+			l*)
+			    IPT_OPTIONS1="--line-numbers"
+			    option=${option#l}
+			    ;;
 			*)
 			    usage 1
 			    ;;
@@ -395,6 +399,8 @@ show_command() {
 		;;
 	esac
     done
+
+    IPT_OPTIONS="$IPT_OPTIONS $IPT_OPTIONS1"
 
     [ -n "$debugging" ] && set -x
     case "$1" in
@@ -602,6 +608,10 @@ dump_command() {
 			    SHOWMACS=Yes
 			    option=${option#m}
 			    ;;
+			l*)
+			    IPT_OPTIONS1="--line-numbers"
+			    option=${option#l}
+			    ;;
 			*)
 			    usage 1
 			    ;;
@@ -614,6 +624,8 @@ dump_command() {
 		;;
 	esac
     done
+
+    IPT_OPTIONS="$IPT_OPTIONS $IPT_OPTIONS1"
 
     [ $VERBOSE -lt 2 ] && VERBOSE=2
 
