@@ -100,6 +100,8 @@
 
       <arg><option>-x</option></arg>
 
+      <arg><option>-l</option></arg>
+
       <arg><option>-m</option></arg>
     </cmdsynopsis>
 
@@ -366,6 +368,8 @@
       <arg choice="plain"><option>show</option></arg>
 
       <arg><option>-x</option></arg>
+
+      <arg><option>-l</option></arg>
 
       <arg><option>-t</option>
       {<option>filter</option>|<option>mangle</option>|<option>raw</option>}</arg>
@@ -650,6 +654,9 @@
           counts are abbreviated. The <emphasis role="bold">-m</emphasis>
           option causes any MAC addresses included in Shorewall6 log messages
           to be displayed.</para>
+
+          <para>The <emphasis role="bold">-l</emphasis> option causes the rule
+          number for each Netfilter rule to be displayed.</para>
         </listitem>
       </varlistentry>
 
@@ -1022,10 +1029,14 @@
                 Netfilter table to display. The default is <emphasis
                 role="bold">filter</emphasis>.</para>
 
-                <para>If the <emphasis role="bold">t</emphasis> option and the
-                <option>chain</option> keyword are both omitted and any of the
-                listed <replaceable>chain</replaceable>s do not exist, a usage
-                message is displayed.</para>
+                <para>The <emphasis role="bold">-l</emphasis> option causes
+                the rule number for each Netfilter rule to be
+                displayed.</para>
+
+                <para>If the <emphasis role="bold">-t</emphasis> option and
+                the <option>chain</option> keyword are both omitted and any of
+                the listed <replaceable>chain</replaceable>s do not exist, a
+                usage message is displayed.</para>
               </listitem>
             </varlistentry>
 
@@ -1100,7 +1111,7 @@
                 between each pair of zones. Note that implicit intrazone
                 ACCEPT policies are not displayed for zones associated with a
                 single network where that network doesn't specify
-                <option>routeback</option>. </para>
+                <option>routeback</option>.</para>
               </listitem>
             </varlistentry>
 
