@@ -18,7 +18,10 @@ Changes in Shorewall 4.4.4
 
 9)  Fix route_rule suppression for down provider.
 
-10) Suppress redundant tests for provider availability in route rules processing.
+10) Suppress redundant tests for provider availability in route rules
+    processing.
+
+11) Implement the '-l' option to the 'show' command.
 
 Changes in Shorewall 4.4.3
 
